@@ -1,8 +1,16 @@
+2008-08-26  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>
+
+	* vc-clearcase.el (clearcase-edcs-font-lock-keywords): new
+	variable
+	(clearcase-edcs-mode-syntax-table): new variable
+	(clearcase-edcs-mode): add proper syntax highlighting to
+	configspecs.
+
 2008-08-22  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>
 
 	* ucm.el (ucm-lsact-activity-pp): don't print the owner of the
 	activity.
-	(ucm-actb-ediff-command): new command
+	(ucm-actb-ediff-command): new function
 	(ucm-actb-mode-map): add binding for `ucm-actb-ediff-command'
 
 	* vc-clearcase.el (vc-clearcase-cancel-version): In a snapshot
